# Elixir

./: .README.md.swp  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  GenerateProjects.bat  GenerateProjects.sh  Main.cpp  Pathtracer.sln  Pathtracer.vcxproj  Pathtracer.vcxproj.filters  README.md
.circleci/: config.yml
.github/workflows/: build.yml
blender/elixir/: __init__.py  base.py  elixir.py
docs/: CNAME  aabb_8cpp.html  aabb_8h.html  aabb_8h_source.html  accelerator_8h.html  accelerator_8h_source.html  annotated.html  annotated_dup.js  boundingvolume_8cpp.html  boundingvolume_8h.html  boundingvolume_8h_source.html  box_8cpp.html  box_8h.html  box_8h_source.html  bvh_8cpp.html  bvh_8h.html  bvh_8h_source.html  camera_8h.html  camera_8h_source.html  class_a_a_b_b-members.html  class_a_a_b_b.html  class_accelerator-members.html  class_accelerator.html  class_b_v_h_accelerator-members.html  class_b_v_h_accelerator.html  class_b_v_h_accelerator.js  class_bounding_volume-members.html  class_bounding_volume.html  class_bounding_volume.js  class_box-members.html  class_box.html  class_box.js  class_camera-members.html  class_camera.html  class_dielectric-members.html  class_dielectric.html  class_diffuse_light-members.html  class_diffuse_light.html  class_diffuse_light.js  class_lambertian-members.html  (+197 more)
docs/html/: annotated.html  annotated_dup.js  boundingvolume_8h_source.html  bvh_8h_source.html  camera_8h_source.html  class_bounding_volume-members.html  class_bounding_volume.html  class_bounding_volume.js  class_bvh-members.html  class_bvh.html  class_bvh.js  class_bvh_node-members.html  class_bvh_node.html  class_bvh_node.js  class_camera-members.html  class_camera.html  class_camera.js  class_dielectric-members.html  class_dielectric.html  class_dielectric.js  class_lambertian-members.html  class_lambertian.html  class_lambertian.js  class_material-members.html  class_material.html  class_material.js  class_metallic-members.html  class_metallic.html  class_point-members.html  class_point.html  class_point.js  class_primitive-members.html  class_primitive.html  class_primitive.js  class_ray-members.html  class_ray.html  class_scene-members.html  class_scene.html  class_scene.js  class_sphere-members.html  (+47 more)
docs/html/search/: all_1.js  all_2.js  all_4.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_2.js  classes_4.js  classes_5.js  classes_7.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  search.css  searchdata.js  variables_0.js  variables_2.js
docs/latex/: annotated.tex  class_bounding_volume.tex  class_bvh.tex  class_bvh_node.tex  class_camera.tex  class_dielectric.eps  class_dielectric.tex  class_lambertian.eps  class_lambertian.tex  class_material.eps  class_material.tex  class_metallic.eps  class_metallic.tex  class_point.tex  class_primitive.eps  class_primitive.tex  class_ray.tex  class_scene.tex  class_sphere.eps  class_sphere.tex  class_vector2.tex  class_vector3.tex  hierarchy.tex  refman.tex  struct_primitive_hit_info.tex
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  (+56 more)
enc_temp_folder/c2fa54c7a24f8b13c714765dc7f9a44/: main.cpp
include/stb/: stbi_image_write.h
include/tsl/: tsl_args.h  tsl_r.lib
src/: main.cpp  poo.💩
src/accelerator/: accelerator.h  bvh.cpp  bvh.h
src/api/: api.cpp  api.h  paramset.cpp  paramset.h
src/bsdf/: dielectric.h
src/camera/: camera.h
src/core/: aabb.cpp  aabb.h  elixir.cpp  elixir.h  film.cpp  interaction.cpp  interaction.h  queue.h  ray.cpp  ray.h  scene.cpp  scene.h  threadpool.h  timer.h
src/core/api/: api.cpp  api.h  paramset.cpp  paramset.h
src/core/bsdf/: bsdf.cpp  bsdf.h  bxdf.cpp  bxdf.h  fresnel.cpp  fresnel.h  lambert.cpp  lambert.h  microfacet.cpp  microfacet.h  mirror.cpp  mirror.h  orennayar.cpp  orennayar.h  reflection.cpp  reflection.h  specular.cpp  specular.h
src/core/bxdf/: bxdf.h  lambert.h
src/core/camera/: camera.cpp  camera.h
src/core/exporter/: exporter.cpp  exporter.h
src/core/film/: film.cpp  film.h
src/core/integrator/: api.cpp  integrator.h  pathintegrator.cpp  pathintegrator.h  pathtracer.cpp  pathtracer.h  samplerintegrator.cpp  samplerintegrator.h  witted.cpp  wittedintegrator.cpp  wittedintegrator.h
src/core/interaction/: interaction.h  surfaceinteraction.cpp  surfaceinteraction.h
src/core/light/: arealight.h  directionallight.cpp  directionallight.h  light.h  pointlight.cpp  pointlight.h  visibilitytester.cpp  visibilitytester.h
src/core/material/: dielectric.h  diffuse.h  glossy.h  lambertian.h  material.h  matte.h  metal.h  metallic.h  plastic.h  specular.h  tslmanager.cpp  tslmanager.h  wittedopaque.h
src/core/primitive/: mesh.h  (+7 more)
src/elixir/: elixir.cpp
src/entity/: transform.cpp
src/geometrics/: geometry.h  primitive.h  sphere.cpp  sphere.h
src/geometry/: box.cpp  box.h  primitive.h  quad.cpp  quad.h  sphere.cpp  sphere.h
src/integrator/: integrator.h
src/light/: arealight.h  light.h  pointlight.h
src/material/: dielectric.h  diffuselight.h  lambert.h  lambertian.h  material.h  metallic.h
src/math/: boundingvolume.cpp  boundingvolume.h  conversionutils.h  math.h  mathutils.h  matrix4x4.cpp  matrix4x4.h  point.h  point2.h  point3.h  random.cpp  random.h  ray.cpp  ray.h  transform.cpp  transform.h  utils.h  vector2.h  vector3.h
src/primitive/: primitive.cpp  primitive.h
src/scene/: scene.cpp  scene.h
src/shape/: box.cpp  box.h  quad.cpp  quad.h  shape.cpp  shape.h  sphere.cpp  sphere.h
src/spatial/: aabb.cpp  aabb.h
src/system/: config.h  config.h.in  error.h  parallel.h  progress.h  system.h  types.h  utils.h
(+64 files in other folders)
